--- a/src/components/navBar.astro
+++ b/src/components/navBar.astro
@@ -1,4 +1,4 @@
-<nav class="flex mt-10 mb-20 justify-around">
+<nav class="flex mt-10 mb-20 justify-between">
   <a href=""><h3 class="h3">Karen Gómez Soto</h3></a>
   <div class="flex gap-20">
     <a href=""><h3 class="h3">Projects</h3></a>
@@ -6,7 +6,10 @@
   </div>
 </nav>
 <style>
-  .h3 {
-    @apply text-3xl font-semibold text-white;
+  h3 {
+    @apply text-2xl font-semibold  text-white;
+  }
+  a {
+    @apply decoration-indigo-300 hover:underline;
   }
 </style>
