--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,31 +8,47 @@ import NavBar from "../components/navBar.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerPolicy="no-referrer"
+    />
     <title>Astro</title>
   </head>
-  <body class="bg-slate-900">
+  <body class="bg-slate-900 container max-w-3xl mx-auto">
     <NavBar />
     <main>
-      <div class="mb-20 text-center sm:mx40">
-        <h1 class="h1 mb-10">
+      <div class="mb-10 text-center sm:text-start">
+        <h1 class="">
           Hello, my name is <span class="span">Karen Gómez</span>
         </h1>
-        <div class="flex flex-col items-center sm:flex-row gap-4">
-          <div class="p flex-1 mx-4">
+        <div
+          class="flex flex-col items-center gap-10 mb-20 sm:flex-row sm:items-stretch"
+        >
+          <div class="p flex-1">
             <p>
               I am a frontEnd developer, currently learning and building new
-              projects since january 2022, I had learned in each one of them and
-              I want to show you them.
+              projects since january 2022 👩🏽‍💻, I had learned in each one of them
+              and I want to show you them.
             </p>
+            <div class="mt-10 flex justify-center gap-10 sm:justify-start">
+              <a href="https://www.linkedin.com/in/karengomezs/"
+                ><i class="fa-brands fa-linkedin"></i></a
+              >
+              <a href="https://github.com/karengomezs"
+                ><i class="fa-brands fa-github"></i></a
+              >
+              <a href="https://twitter.com/karengomezsoto"
+                ><i class="fa-brands fa-twitter"></i></a
+              >
+            </div>
           </div>
-          <div class="flex-1"><img src="/imagen.jpg" alt="" /></div>
+          <div class="flex justify-end">
+            <img src="/imagen.jpg" alt="" />
+          </div>
         </div>
-
-        <!-- <div class="flex gap-10">
-          <a href=""><p>Linkedin</p></a>
-          <a href=""><p>git</p></a>
-          <a href=""><p>twitter</p></a>
-        </div> -->
       </div>
       <div>
         <h3>Skills</h3>
@@ -40,19 +56,22 @@ import NavBar from "../components/navBar.astro";
     </main>
     <style>
       h1 {
-        @apply text-4xl font-bold  text-white;
+        @apply text-4xl font-bold mb-10 sm:mb-20  text-white;
       }
       span {
         @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
       }
       p {
-        @apply text-xl font-medium text-slate-400;
+        @apply text-xl font-medium text-center sm:text-start sm:text-justify  text-slate-400;
       }
       img {
         @apply w-60 rounded-full;
       }
       h3 {
-        @apply text-3xl font-semibold text-white;
+        @apply text-2xl font-semibold text-white;
+      }
+      a {
+        @apply text-3xl font-semibold  text-white;
       }
     </style>
   </body>
