--- a/src/components/navBar.astro
+++ b/src/components/navBar.astro
@@ -1,15 +1,15 @@
-<nav class="flex mt-10 mb-20 justify-between">
+<nav class="flex flex-col mt-10 mb-20 gap-3 sm:flex-row sm:justify-between">
   <a href=""><h3 class="h3">Karen Gómez Soto</h3></a>
-  <div class="flex gap-20">
+  <div class="flex flex-col gap-3 sm:flex-row sm:gap-10">
     <a href=""><h3 class="h3">Projects</h3></a>
     <a href=""><h3 class="h3">About</h3></a>
   </div>
 </nav>
 <style>
   h3 {
-    @apply text-2xl font-semibold  text-white;
+    @apply text-2xl text-center sm:text-start font-semibold text-white hover:text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500;
   }
-  a {
+  /* a {
     @apply decoration-indigo-300 hover:underline;
-  }
+  } */
 </style>
