--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/navBar.astro";
+import projectsData from "../data/projects.json";
 ---
 
 <html lang="en">
@@ -28,7 +29,7 @@ import NavBar from "../components/navBar.astro";
           class="flex flex-col items-center gap-10 mb-20 sm:flex-row sm:items-stretch"
         >
           <div class="p flex-1">
-            <p>
+            <p class="introduce-text">
               I am a frontEnd developer, currently learning and building new
               projects since january 2022 👩🏽‍💻, I had learned in each one of them
               and I want to show you them.
@@ -46,7 +47,7 @@ import NavBar from "../components/navBar.astro";
             </div>
           </div>
           <div class="flex justify-end">
-            <img class="img" src="/imagen.jpg" alt="" />
+            <img class="img-profile" src="/imagen.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -64,7 +65,6 @@ import NavBar from "../components/navBar.astro";
               alt="JavaScript"
             /></a
           >
-
           <a href="https://git-scm.com/" target="_blank" rel="noreferrer"
             ><img
               src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/git-colored.svg"
@@ -163,24 +163,86 @@ import NavBar from "../components/navBar.astro";
           > -->
         </div>
       </div>
-      <div class="mt-10 text-center sm:text-start">
+      <!-- div seccion proyectos -->
+      <div class="mb-10 text-center sm:text-start">
         <h3>My projects</h3>
-        <div></div>
+        <!-- div de todos los proyectos -->
+        <div class="flex flex-col mt-10">
+          <!-- div primer proyecto -->
+
+          {
+            projectsData.map((project) => {
+              return (
+                <div class="flex flex-col sm:flex-row rounded-md border-2 border-gray-400 m-2">
+                  <div class="w-100 h-15">
+                    <img class="img-project" src={project.img} alt="" />
+                  </div>
+                  <div class="p-4 flex flex-col items-center">
+                    <h2 class="title-project">{project.title}</h2>
+                    <p class="text-project">{project.text}</p>
+                    <button>
+                      Go to
+                      <i
+                        title="github"
+                        class="ml-2 fa-brands fa-github text-white"
+                      />
+                    </button>
+                  </div>
+                </div>
+              );
+            })
+          }
+
+          <!-- <div
+            class="flex flex-col sm:flex-row rounded-md border-2 border-gray-400 m-2 flex"
+          >
+          <!--
+            <div class="w-100 h-15">
+              <img class="img-project" src="/drawarrow.png" alt="" />
+            </div>
+            <div class="p-4 flex flex-col items-center">
+              <h2 class="title-project">Draw Arrow</h2>
+              <p class="text-project">
+                Draw arrow is about making a drawing with the keyboard arrows on
+                a canvas starting from a fixed point.
+              </p>
+              <button>Go to GitHub</button>
+              <i class="fa-brands fa-github text-white"></i>
+            </div> -->
+          <!-- </div>  -->
+
+          <!-- div cuarto proyecto -->
+        </div>
+        <!-- termina div de todos los proyectos -->
       </div>
+      <!-- termina div sección proyectos -->
     </main>
     <style>
       h1 {
         @apply text-4xl font-bold mb-10 sm:mb-20  text-white;
       }
+      .title-project {
+        @apply text-center font-semibold sm:text-start  text-white;
+      }
+      .text-project {
+        @apply text-justify  text-slate-400;
+      }
+      .img-profile {
+        @apply w-60 rounded-full;
+      }
+      .img-project {
+        @apply object-cover rounded;
+      }
+      button {
+        @apply text-center font-semibold text-white bg-slate-700 rounded-md w-40 h-8 my-2;
+      }
       span {
         @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
       }
-      p {
+      .introduce-text {
         @apply text-xl font-medium text-center sm:text-start sm:text-justify  text-slate-400;
       }
-      .img {
-        @apply w-60 rounded-full;
-      }
+
       h3 {
         @apply text-2xl font-semibold text-white;
       }
