--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -211,7 +211,7 @@ import projectsData from "@/data/projects.json";
         @apply w-60 rounded-full;
       }
       .img-project {
-        @apply object-cover rounded-t;
+        @apply object-fill h-full rounded-t sm:rounded-l sm:max-w-xs;
       }
       button {
         @apply text-center font-semibold text-white bg-slate-700 rounded-md w-40 h-8 my-2;
