--- a/src/components/navBar.astro
+++ b/src/components/navBar.astro
@@ -1,7 +1,7 @@
-<nav class="flex flex-col mt-10 mb-20 gap-3 sm:flex-row sm:justify-between">
-  <a href=""><h3 class="h3">Karen Gómez Soto</h3></a>
+<nav class="flex flex-col mt-10 mb-10 gap-3 sm:flex-row sm:justify-between">
+  <a href="/"><h3 class="h3">Karen Gómez Soto</h3></a>
   <div class="flex flex-col gap-3 sm:flex-row sm:gap-10">
-    <a href=""><h3 class="h3">Projects</h3></a>
+    <a href="/projects"><h3 class="h3">Projects</h3></a>
     <a href=""><h3 class="h3">About</h3></a>
   </div>
 </nav>
