--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import NavBar from "@/components/navBar.astro";
-import projectsData from "@/data/projects.json";
+import Projects from "@/components/projectshome.astro";
 ---
 
 <html lang="en">
@@ -167,32 +167,7 @@ import projectsData from "@/data/projects.json";
       <div class="mb-10 text-center sm:text-start">
         <h3>My projects</h3>
         <!-- div de todos los proyectos -->
-        <div class="flex flex-col mt-10">
-          <!-- div cada proyecto-->
-
-          {
-            projectsData.map((project) => {
-              return (
-                <div class="flex flex-col sm:flex-row rounded-md border-2 border-slate-400 m-2">
-                  <div class="w-100 h-15">
-                    <img class="img-project" src={project.img} alt="" />
-                  </div>
-                  <div class="p-4 flex flex-col gap-2 items-center">
-                    <h2 class="title-project">{project.title}</h2>
-                    <p class="text-project">{project.text}</p>
-                    <button>
-                      Go to
-                      <i
-                        title="github"
-                        class="ml-2 fa-brands fa-github text-white"
-                      />
-                    </button>
-                  </div>
-                </div>
-              );
-            })
-          }
-        </div>
+        <Projects />
         <!-- termina div de todos los proyectos -->
       </div>
       <!-- termina div sección proyectos -->
