--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,7 +10,7 @@ import ProjectsDetails from "@/components/projectsdetails.astro";
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="bg-slate-900 container max-w-3xl mx-auto px-4">
+  <body class="bg-slate-900 container px-5 mx-auto max-w-4xl">
     <NavBar />
     <main>
       <h3>Some details about my projects 🙋🏽‍♀️🔍</h3>
