--- a/src/components/projectsdetails.astro
+++ b/src/components/projectsdetails.astro
@@ -9,10 +9,11 @@ import projectsData from "@/data/projects.json";
     projectsData.map((project) => {
       return (
         <>
-          <div class="flex flex-col sm:flex-row rounded-md border-2 border-slate-600 hover:border-white m-2">
-            <div class="w-100 h-15">
-              <img class="img-project" src={project.img} alt="" />
-            </div>
+          <div class="flex flex-col md:flex-row rounded-md border-2 border-slate-600 hover:border-white my-4">
+            {/*<div class="w-100 h-15">
+              
+           </div>*/}
+            <img class="img-project" src={project.img} alt="" />
             <div class="p-3 flex flex-col gap-2 items-center">
               <h2 class="title-project">{project.title}</h2>
               <p class="text-project">{project.text}</p>
@@ -34,12 +35,12 @@ import projectsData from "@/data/projects.json";
 </div>
 <style>
   .title-project {
-    @apply text-center text-xl font-semibold sm:text-start text-white;
+    @apply text-xl font-semibold text-white;
   }
   .text-project {
     @apply text-justify  text-slate-400 mb-2;
   }
   .img-project {
-    @apply object-fill h-full rounded-t sm:rounded-l sm:max-w-xs;
+    @apply object-fill rounded-t sm:rounded-l sm:max-w-xs;
   }
 </style>
