fix space width

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,17 +19,17 @@ import Projects from "@/components/projectshome.astro";
     <title>Karen Gómez</title>
   </head>
   <!-- <body class="bg-slate-900 container max-w-3xl mx-auto px-4 sm:px-10"> -->
-  <body class="bg-slate-900 container px-5 mx-auto max-w-4xl">
+  <body class="bg-slate-900 container px-5 mx-auto max-w-3xl">
     <NavBar />
     <main>
       <div class="mb-10 text-center sm:text-start">
-        <h1 class="">
+        <h1>
           Hello, my name is <span class="span">Karen Gómez</span>
         </h1>
         <div
-          class="flex flex-col items-center gap-10 mb-20 sm:flex-row sm:items-stretch"
+          class="flex flex-col items-center gap-10 sm:flex-row sm:items-stretch"
         >
-          <div class="p flex-1">
+          <div class="flex-1">
             <p class="introduce-text">
               I am a frontEnd developer, currently learning and building new
               projects since january 2022 👩🏽‍💻, I had learned in each one of them
@@ -175,7 +175,7 @@ import Projects from "@/components/projectshome.astro";
     </main>
     <style>
       h1 {
-        @apply text-4xl font-bold mb-10 sm:mb-20  text-white;
+        @apply text-4xl font-bold mb-10  text-white;
       }
       .title-project {
         @apply text-center font-semibold sm:text-start text-white;
