--- a/src/components/projectsdetails.astro
+++ b/src/components/projectsdetails.astro
@@ -9,25 +9,24 @@ import projectsData from "@/data/projects.json";
     projectsData.map((project) => {
       return (
         <>
-          <div class="flex flex-col md:flex-row rounded-md border-2 border-slate-600 hover:border-white my-4">
-            {/*<div class="w-100 h-15">
-              
-           </div>*/}
-            <img class="img-project" src={project.img} alt="" />
-            <div class="p-3 flex flex-col gap-2 items-center">
-              <h2 class="title-project">{project.title}</h2>
-              <p class="text-project">{project.text}</p>
-              <div class="flex justify-center flex-wrap gap-3">
-                {project.techStack.map((tool) => {
-                  return (
-                    <div class="rounded-md bg-slate-700 p-1">
-                      <p class="text-white">{tool}</p>
-                    </div>
-                  );
-                })}
+          <a href={project.urlProject}>
+            <div class="flex flex-col md:flex-row rounded-md border-2 border-slate-600 hover:border-white my-4">
+              <img class="img-project" src={project.img} alt="" />
+              <div class="p-3 flex flex-col gap-2 items-center">
+                <h2 class="title-project">{project.title}</h2>
+                <p class="text-project">{project.text}</p>
+                <div class="flex justify-center flex-wrap gap-3">
+                  {project.techStack.map((tool) => {
+                    return (
+                      <div class="rounded-md bg-slate-700 p-1">
+                        <p class="text-white">{tool}</p>
+                      </div>
+                    );
+                  })}
+                </div>
               </div>
             </div>
-          </div>
+          </a>
         </>
       );
     })
