--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,19 +31,21 @@ import Projects from "@/components/projectshome.astro";
         >
           <div class="flex-1">
             <p class="introduce-text">
-              I am a frontEnd developer, currently learning and building new
-              projects since january 2022 👩🏽‍💻, I had learned in each one of them
-              and I want to show you them.
+              I am a frontend developer, currently learning and building new
+              projects since January 2022 🚀 to strengthen my knowledge and
+              solidify my programming skills 👩🏽‍💻. With each of my projects, I
+              have learned a lot, and I would like to invite you to take a look
+              at them 👀👉🏽🔜
             </p>
             <div class="mt-10 flex justify-center gap-10 sm:justify-start">
               <a href="https://www.linkedin.com/in/karengomezs/"
-                ><i class="fa-brands fa-linkedin"></i></a
+                ><i class="fa-brands fa-linkedin hover:text-blue-700"></i></a
               >
               <a href="https://github.com/karengomezs"
-                ><i class="fa-brands fa-github"></i></a
+                ><i class="fa-brands fa-github hover:text-black"></i></a
               >
               <a href="https://twitter.com/karengomezsoto"
-                ><i class="fa-brands fa-twitter"></i></a
+                ><i class="fa-brands fa-twitter hover:text-sky-600"></i></a
               >
             </div>
           </div>
@@ -184,7 +186,7 @@ import Projects from "@/components/projectshome.astro";
         @apply text-justify  text-slate-400;
       }
       .img-profile {
-        @apply w-60 rounded-full;
+        @apply w-60  rounded-full;
       }
       .img-project {
         @apply object-fill h-full rounded-t sm:rounded-l sm:max-w-xs;
@@ -196,7 +198,7 @@ import Projects from "@/components/projectshome.astro";
         @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
       }
       .introduce-text {
-        @apply text-xl font-medium text-center sm:text-start sm:text-justify  text-slate-400;
+        @apply text-xl font-medium text-justify   text-slate-400;
       }
 
       h3 {
