adding new component blog array

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,9 +38,9 @@ import Projects from "@/components/projectshome.astro";
               at them 👀👉🏽🔜
             </p>
             <div class="mt-10 flex justify-center gap-10 sm:justify-start">
-              <a href="https://www.linkedin.com/in/karengomezs/"
-                ><i class="fa-brands fa-linkedin hover:text-blue-700"></i></a
-              >
+              <a href="https://www.linkedin.com/in/karengomezs/">
+                <i class="fa-brands fa-linkedin hover:text-blue-700"></i>
+              </a>
               <a href="https://github.com/karengomezs"
                 ><i class="fa-brands fa-github hover:text-black"></i></a
               >
