--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -1,6 +1,6 @@
 ---
 import NavBar from "@/components/navBar.astro";
-import ProjectsDetails from "@/components/projectsdetails.astro";
+import Blogsdetails from "@/components/blogsdetails.astro";
 ---
 
 <html lang="en">
@@ -8,13 +8,13 @@ import ProjectsDetails from "@/components/projectsdetails.astro";
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Built Projects</title>
+    <title>Blogs</title>
   </head>
   <body class="bg-slate-900 container px-5 mx-auto max-w-4xl">
     <NavBar />
     <main>
-      <h3>Some details about my projects 🙋🏽‍♀️🔍</h3>
-      <ProjectsDetails />
+      <h3>Come with me to see some tips in TS 🙋🏽‍♀️🔍</h3>
+      <Blogsdetails />
       <style>
         h3 {
           @apply text-2xl font-semibold text-white;
