--- a/src/components/blogsdetails.astro
+++ b/src/components/blogsdetails.astro
@@ -8,9 +8,9 @@ import blogsData from "@/data/blogs.json";
       return (
         <>
           <a href={blog.urlBlog}>
-            <div class="flex flex-col md:flex-row rounded-md border-2 border-slate-600 hover:border-white my-4">
+            <div class="flex rounded-md border-2 border-slate-600 hover:border-white my-4">
               <img class="img-project" src={blog.img} alt="" />
-              <div class="p-3 flex flex-col gap-2 items-center">
+              <div class="p-3 flex items-center">
                 <h2 class="title-project">{blog.title}</h2>
               </div>
             </div>
@@ -27,6 +27,5 @@ import blogsData from "@/data/blogs.json";
   }
 
   .img-project {
-    @apply w-50;
   }
 </style>
