--- a/src/components/blogsdetails.astro
+++ b/src/components/blogsdetails.astro
@@ -1,17 +1,19 @@
 ---
-import blogsData from "@/data/blogs.json";
+import { getCollection, CollectionEntry } from "astro:content";
+
+const blogs = await getCollection("blog");
 ---
 
 <div class="flex flex-col mt-10">
   {
-    blogsData.map((blog) => {
+    blogs.map((blog) => {
       return (
         <>
-          <a href={blog.urlBlog}>
+          <a href={`/blog/${blog.slug}`}>
             <div class="flex rounded-md border-2 border-slate-600 hover:border-white my-4">
-              <img class="img-project" src={blog.img} alt="" />
+              <img src={blog.data.img} alt="" />
               <div class="p-3 flex items-center">
-                <h2 class="title-project">{blog.title}</h2>
+                <h2 class="title-project">{blog.data.title}</h2>
               </div>
             </div>
           </a>
