--- a/src/components/navBar.astro
+++ b/src/components/navBar.astro
@@ -2,7 +2,7 @@
   <a href="/"><h3 class="h3">Karen Gómez</h3></a>
   <div class="flex flex-col gap-3 sm:flex-row sm:gap-10">
     <a href="/projects"><h3 class="h3">Projects</h3></a>
-    <a href="/blogs"><h3 class="h3">Blog</h3></a>
+    <a href="/blog"><h3 class="h3">Blog</h3></a>
   </div>
 </nav>
 <style>
