--- a/src/components/blogsdetails.astro
+++ b/src/components/blogsdetails.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection, CollectionEntry } from "astro:content";
+import { getCollection } from "astro:content";
 
 const blogs = await getCollection("blog");
 ---
