--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "../../layout/general.astro";
 import { CollectionEntry, getCollection } from "astro:content";
 
 interface Props {
@@ -24,8 +25,8 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<main>
+<Layout>
   <article>
     <Content />
   </article>
-</main>
+</Layout>
