--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import NavBar from "@/components/navBar.astro";
 import Projects from "@/components/projectshome.astro";
+import Layout from "@/layout/general.astro";
 ---
 
 <html lang="en">
@@ -14,132 +15,130 @@ import Projects from "@/components/projectshome.astro";
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
-      referrerPolicy="no-referrer"
+      referrerpolicy="no-referrer"
     />
     <title>Karen Gómez</title>
   </head>
   <!-- <body class="bg-slate-900 container max-w-3xl mx-auto px-4 sm:px-10"> -->
-  <body class="bg-slate-900 container px-5 mx-auto max-w-4xl">
-    <NavBar />
-    <main>
-      <div class="mb-10 text-center sm:text-start">
-        <h1>
-          Hello, my name is <span class="span">Karen Gómez</span>
-        </h1>
-        <div
-          class="flex flex-col items-center gap-10 sm:flex-row sm:items-stretch"
-        >
-          <div class="flex-1">
-            <p class="introduce-text">
-              I am a frontend developer, currently learning and building new
-              projects since January 2022 🚀 to strengthen my knowledge and
-              solidify my programming skills 👩🏽‍💻. With each of my projects, I
-              have learned a lot, and I would like to invite you to take a look
-              at them 👀👉🏽🔜
-            </p>
-            <div class="mt-10 flex justify-center gap-10 sm:justify-start">
-              <a href="https://www.linkedin.com/in/karengomezs/">
-                <i class="fa-brands fa-linkedin hover:text-blue-700"></i>
-              </a>
-              <a href="https://github.com/karengomezs"
-                ><i class="fa-brands fa-github hover:text-black"></i></a
-              >
-              <a href="https://twitter.com/karengomezsoto"
-                ><i class="fa-brands fa-twitter hover:text-sky-600"></i></a
-              >
-            </div>
-          </div>
-          <div class="flex justify-end">
-            <img class="img-profile" src="/imagen.jpg" alt="" />
+  <Layout>
+    <div class="mb-10 text-center sm:text-start">
+      <h1>
+        Hello, my name is <span class="span">Karen Gómez</span>
+      </h1>
+      <div
+        class="flex flex-col items-center gap-10 sm:flex-row sm:items-stretch"
+      >
+        <div class="flex-1">
+          <p class="introduce-text">
+            I am a frontend developer, currently learning and building new
+            projects since January 2022 🚀 to strengthen my knowledge and
+            solidify my programming skills 👩🏽‍💻. With each of my projects, I have
+            learned a lot, and I would like to invite you to take a look at them
+            👀👉🏽🔜
+          </p>
+          <div class="mt-10 flex justify-center gap-10 sm:justify-start">
+            <a href="https://www.linkedin.com/in/karengomezs/">
+              <i class="fa-brands fa-linkedin hover:text-blue-700"></i>
+            </a>
+            <a href="https://github.com/karengomezs"
+              ><i class="fa-brands fa-github hover:text-black"></i></a
+            >
+            <a href="https://twitter.com/karengomezsoto"
+              ><i class="fa-brands fa-twitter hover:text-sky-600"></i></a
+            >
           </div>
         </div>
+        <div class="flex justify-end">
+          <img class="img-profile" src="/imagen.jpg" alt="" />
+        </div>
       </div>
-      <div class="mb-10 text-center sm:text-start">
-        <h3>Tech Stack</h3>
-        <div class="mt-10 flex justify-center gap-7 flex-wrap">
-          <a
-            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-            target="_blank"
-            rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/javascript-colored.svg"
-              width="36"
-              height="36"
-              alt="JavaScript"
-            /></a
-          >
-          <a href="https://git-scm.com/" target="_blank" rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/git-colored.svg"
-              width="36"
-              height="36"
-              alt="Git"
-            /></a
-          >
-          <a
-            href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5"
-            target="_blank"
-            rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/html5-colored.svg"
-              width="36"
-              height="36"
-              alt="HTML5"
-            /></a
-          >
-          <a
-            href="https://www.w3.org/TR/CSS/#css"
-            target="_blank"
-            rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/css3-colored.svg"
-              width="36"
-              height="36"
-              alt="CSS3"
-            /></a
-          >
-          <a href="https://reactjs.org/" target="_blank" rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg"
-              width="36"
-              height="36"
-              alt="React"
-            /></a
-          >
-          <a href="https://nextjs.org/docs" target="_blank" rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/nextjs-colored-dark.svg"
-              width="36"
-              height="36"
-              alt="NextJs"
-            /></a
-          >
-          <a href="https://sass-lang.com/" target="_blank" rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/sass-colored.svg"
-              width="36"
-              height="36"
-              alt="Sass"
-            /></a
-          >
-          <a href="https://tailwindcss.com/" target="_blank" rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/tailwindcss-colored.svg"
-              width="36"
-              height="36"
-              alt="TailwindCSS"
-            /></a
-          >
+    </div>
+    <div class="mb-10 text-center sm:text-start">
+      <h3>Tech Stack</h3>
+      <div class="mt-10 flex justify-center gap-7 flex-wrap">
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+          target="_blank"
+          rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/javascript-colored.svg"
+            width="36"
+            height="36"
+            alt="JavaScript"
+          /></a
+        >
+        <a href="https://git-scm.com/" target="_blank" rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/git-colored.svg"
+            width="36"
+            height="36"
+            alt="Git"
+          /></a
+        >
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Glossary/HTML5"
+          target="_blank"
+          rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/html5-colored.svg"
+            width="36"
+            height="36"
+            alt="HTML5"
+          /></a
+        >
+        <a
+          href="https://www.w3.org/TR/CSS/#css"
+          target="_blank"
+          rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/css3-colored.svg"
+            width="36"
+            height="36"
+            alt="CSS3"
+          /></a
+        >
+        <a href="https://reactjs.org/" target="_blank" rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg"
+            width="36"
+            height="36"
+            alt="React"
+          /></a
+        >
+        <a href="https://nextjs.org/docs" target="_blank" rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/nextjs-colored-dark.svg"
+            width="36"
+            height="36"
+            alt="NextJs"
+          /></a
+        >
+        <a href="https://sass-lang.com/" target="_blank" rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/sass-colored.svg"
+            width="36"
+            height="36"
+            alt="Sass"
+          /></a
+        >
+        <a href="https://tailwindcss.com/" target="_blank" rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/tailwindcss-colored.svg"
+            width="36"
+            height="36"
+            alt="TailwindCSS"
+          /></a
+        >
 
-          <a href="https://vitejs.dev/" target="_blank" rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/vite-colored.svg"
-              width="36"
-              height="36"
-              alt="Vite"
-            /></a
-          >
-          <!-- <a href="https://www.figma.com/" target="_blank" rel="noreferrer"
+        <a href="https://vitejs.dev/" target="_blank" rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/vite-colored.svg"
+            width="36"
+            height="36"
+            alt="Vite"
+          /></a
+        >
+        <!-- <a href="https://www.figma.com/" target="_blank" rel="noreferrer"
             ><img
               src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/figma-colored.svg"
               width="36"
@@ -148,15 +147,15 @@ import Projects from "@/components/projectshome.astro";
             /></a
           > -->
 
-          <a href="https://getbootstrap.com/" target="_blank" rel="noreferrer"
-            ><img
-              src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/bootstrap-colored.svg"
-              width="36"
-              height="36"
-              alt="Bootstrap"
-            /></a
-          >
-          <!-- <a href="https://www.mysql.com/" target="_blank" rel="noreferrer"
+        <a href="https://getbootstrap.com/" target="_blank" rel="noreferrer"
+          ><img
+            src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/bootstrap-colored.svg"
+            width="36"
+            height="36"
+            alt="Bootstrap"
+          /></a
+        >
+        <!-- <a href="https://www.mysql.com/" target="_blank" rel="noreferrer"
             ><img
               src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/mysql-colored.svg"
               width="36"
@@ -164,49 +163,48 @@ import Projects from "@/components/projectshome.astro";
               alt="MySQL"
             /></a
           > -->
-        </div>
       </div>
-      <!-- div seccion proyectos -->
-      <div class="mb-10 text-center sm:text-start">
-        <h3>My projects</h3>
-        <!-- div de todos los proyectos -->
-        <Projects />
-        <!-- termina div de todos los proyectos -->
-      </div>
-      <!-- termina div sección proyectos -->
-    </main>
-    <style>
-      h1 {
-        @apply text-4xl font-bold mb-10  text-white;
-      }
-      .title-project {
-        @apply text-center font-semibold sm:text-start text-white;
-      }
-      .text-project {
-        @apply text-justify  text-slate-400;
-      }
-      .img-profile {
-        @apply w-60  rounded-full;
-      }
-      .img-project {
-        @apply object-fill h-full rounded-t sm:rounded-l sm:max-w-xs;
-      }
-      button {
-        @apply text-center font-semibold text-white bg-slate-700 rounded-md w-40 h-8 my-2;
-      }
-      span {
-        @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
-      }
-      .introduce-text {
-        @apply text-xl font-medium text-justify   text-slate-400;
-      }
+    </div>
+    <!-- div seccion proyectos -->
+    <div class="mb-10 text-center sm:text-start">
+      <h3>My projects</h3>
+      <!-- div de todos los proyectos -->
+      <Projects />
+      <!-- termina div de todos los proyectos -->
+    </div>
+  </Layout>
 
-      h3 {
-        @apply text-2xl font-semibold text-white;
-      }
-      a {
-        @apply text-3xl font-semibold  text-white;
-      }
-    </style>
-  </body>
+  <style>
+    h1 {
+      @apply text-4xl font-bold mb-10  text-white;
+    }
+    .title-project {
+      @apply text-center font-semibold sm:text-start text-white;
+    }
+    .text-project {
+      @apply text-justify  text-slate-400;
+    }
+    .img-profile {
+      @apply w-60  rounded-full;
+    }
+    .img-project {
+      @apply object-fill h-full rounded-t sm:rounded-l sm:max-w-xs;
+    }
+    button {
+      @apply text-center font-semibold text-white bg-slate-700 rounded-md w-40 h-8 my-2;
+    }
+    span {
+      @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
+    }
+    .introduce-text {
+      @apply text-xl font-medium text-justify   text-slate-400;
+    }
+
+    h3 {
+      @apply text-2xl font-semibold text-white;
+    }
+    a {
+      @apply text-3xl font-semibold  text-white;
+    }
+  </style>
 </html>
