--- a/src/components/projectshome.astro
+++ b/src/components/projectshome.astro
@@ -2,12 +2,12 @@
 import projectsData from "@/data/projects.json";
 ---
 
-<div class="flex flex-col mt-10 gap-5">
+<div class="flex flex-col mt-10 gap-4">
   {
     projectsData.map((project) => {
       return (
         <a href={project.gitHub}>
-          <div class="flex justify-between bg-slate-800 border-slate-600 hover:border-white rounded-md border-2 px-3 h-10">
+          <div class="flex justify-between bg-slate-800 border-slate-600 hover:border-white rounded-md border-2 px-3 py-2">
             <h2 class="text-white font-semibold my-auto">{project.title}</h2>
             <p class="text-slate-400 font-semibold my-auto">
               Go to
@@ -21,7 +21,7 @@ import projectsData from "@/data/projects.json";
   <div class="flex justify-end">
     <a href="/projects">
       <button
-        class="text-center font-semibold text-white rounded-md w-40 h-8 bg-gradient-to-r from-green-600 to-blue-600 hover:from-pink-500 hover:to-yellow-500"
+        class="text-center font-semibold text-white rounded-md w-40 h-8 bg-gradient-to-r from-green-600 to-blue-500 hover:from-pink-500 hover:to-yellow-500"
         >View All</button
       >
     </a>
