--- a/src/components/navBar.astro
+++ b/src/components/navBar.astro
@@ -1,13 +1,13 @@
 <nav class="flex flex-row mt-10 mb-10 justify-between">
-  <a href="/"><h3 class="h3">Karen Gómez</h3></a>
-  <div class="flex flex-col gap-3 sm:flex-row sm:gap-10">
-    <a href="/projects"><h3 class="h3">Projects</h3></a>
-    <a href="/blog"><h3 class="h3">Blog</h3></a>
+  <a href="/"><h3>KarenGómez</h3></a>
+  <div class="flex gap-3 sm:flex-row sm:gap-10">
+    <a href="/projects"><h3>Projects</h3></a>
+    <a href="/blog"><h3>Blog</h3></a>
   </div>
 </nav>
 <style>
   h3 {
-    @apply text-2xl text-center sm:text-start font-semibold text-white hover:text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500;
+    @apply text-center sm:text-start font-semibold hover:text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500;
   }
   /* a {
     @apply decoration-indigo-300 hover:underline;
