--- a/src/layout/general.astro
+++ b/src/layout/general.astro
@@ -1,6 +1,5 @@
 ---
 import NavBar from "@/components/navBar.astro";
-import Projects from "@/components/projectshome.astro";
 ---
 
 <html lang="en">
@@ -24,5 +23,41 @@ import Projects from "@/components/projectshome.astro";
     <main>
       <slot />
     </main>
+
+    <style is:global>
+      p {
+        @apply text-xl text-justify  text-slate-300;
+      }
+      p a {
+        @apply text-blue-500;
+      }
+
+      h3 {
+        @apply text-2xl font-semibold text-white;
+      }
+
+      .hover-gradient {
+        @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
+      }
+
+      /*
+
+      .img-project {
+        @apply object-fill h-full rounded-t sm:rounded-l sm:max-w-xs;
+      }
+      button {
+        @apply text-center font-semibold text-white bg-slate-700 rounded-md w-40 h-8 my-2;
+      }
+
+      .introduce-text {
+        @apply text-xl font-medium text-justify   text-slate-400;
+      }
+      a {
+        @apply text-3xl font-semibold  text-white;
+      }
+
+     
+      */
+    </style>
   </body>
 </html>
