--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -35,14 +35,22 @@ const { Content } = await entry.render();
   h1 {
     @apply text-4xl font-bold my-10 py-2 text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
   }
+
+  h2 {
+    @apply text-3xl font-semibold text-white;
+  }
+
+  h3 {
+    @apply text-2xl font-semibold mb-8 text-white;
+  }
   p {
     @apply my-3 text-xl font-medium text-justify  text-slate-200;
   }
-  h2 {
-    @apply text-white text-xl mt-4 font-semibold;
+  em {
+    @apply text-white;
   }
   pre {
-    @apply py-3 pl-5 my-8 rounded-md;
+    @apply py-3 pl-5 mb-8 rounded-md;
   }
   a {
     @apply text-sky-400;
