--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,5 +1,5 @@
 ---
-import NavBar from "@/components/navBar.astro";
+import Layout from "@/layout/general.astro";
 import ProjectsDetails from "@/components/projectsdetails.astro";
 ---
 
@@ -10,16 +10,9 @@ import ProjectsDetails from "@/components/projectsdetails.astro";
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Built Projects</title>
   </head>
-  <body class="bg-slate-900 container px-5 mx-auto max-w-4xl">
-    <NavBar />
-    <main>
-      <h3>Some details about my projects 🙋🏽‍♀️🔍</h3>
-      <ProjectsDetails />
-      <style>
-        h3 {
-          @apply text-2xl font-semibold text-white;
-        }
-      </style>
-    </main>
-  </body>
+  <Layout>
+    <h3>Some details about my projects 🙋🏽‍♀️ 🔍</h3>
+    <ProjectsDetails />
+  </Layout>
+
 </html>
