finall index page styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ import Layout from "@/layout/general.astro";
             👀 👉🏽 🔜
           </p>
           <div
-            class="mt-10 flex justify-center gap-4 sm:justify-start text-white text-3xl"
+            class="flex justify-center gap-4 sm:justify-start text-white text-3xl"
           >
             <a href="https://www.linkedin.com/in/karengomezs/">
               <i
@@ -59,9 +59,9 @@ import Layout from "@/layout/general.astro";
         </div>
       </div>
     </div>
-    <div class="mb-10 text-center sm:text-start">
+    <div class="text-center sm:text-start">
       <h3>Tech Stack</h3>
-      <div class="mt-10 flex justify-center gap-5 flex-wrap">
+      <div class="mb-10 flex justify-center gap-5 flex-wrap">
         <a
           title="JavaScript"
           href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
@@ -207,7 +207,7 @@ import Layout from "@/layout/general.astro";
       </div>
     </div>
     <!-- div seccion proyectos -->
-    <div class="mb-10 text-center sm:text-start">
+    <div class="text-center sm:text-start">
       <div class="flex justify-between">
         <h3>My projects</h3>
 
@@ -223,7 +223,7 @@ import Layout from "@/layout/general.astro";
 
   <style>
     h1 {
-      @apply text-4xl font-bold mb-10  text-white;
+      @apply text-white;
     }
 
     .img-profile {
