--- a/src/components/navBar.astro
+++ b/src/components/navBar.astro
@@ -1,4 +1,4 @@
-<nav class="flex flex-row mt-10 mb-10 justify-between">
+<nav class="flex flex-row pt-10 justify-between">
   <a href="/"><h3>KarenGómez</h3></a>
   <div class="flex gap-3 sm:flex-row sm:gap-10">
     <a href="/projects"><h3>Projects</h3></a>
