--- a/src/layout/general.astro
+++ b/src/layout/general.astro
@@ -25,18 +25,21 @@ import NavBar from "@/components/navBar.astro";
     </main>
     <style is:global>
       p {
-        @apply text-xl text-justify mb-3 text-slate-300;
+        @apply text-xl text-justify mb-6 text-slate-300;
       }
       p a {
-        @apply text-blue-500;
+        @apply text-blue-400;
       }
-
       h3 {
-        @apply text-2xl font-semibold text-white mb-8;
+        @apply text-2xl font-semibold text-white mb-10;
       }
 
       h2 {
         @apply text-3xl font-semibold text-white;
+      }
+
+      h1 {
+        @apply text-4xl font-bold pb-10;
       }
 
       .hover-gradient {
@@ -44,7 +47,7 @@ import NavBar from "@/components/navBar.astro";
       }
 
       .big-container {
-        @apply flex flex-col mt-10 gap-4;
+        @apply flex flex-col gap-4;
       }
 
       a button {
