--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -33,16 +33,15 @@ const { Content } = await entry.render();
 
 <style is:global>
   h1 {
-    @apply text-4xl font-bold my-10 py-2 text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
   }
-
+  hr {
+    @apply pb-4;
+  }
   em {
     @apply text-white;
   }
   pre {
     @apply py-3 pl-5 mb-8 rounded-md;
-  }
-  a {
-    @apply text-sky-400;
   }
 </style>
