--- a/src/layout/general.astro
+++ b/src/layout/general.astro
@@ -18,14 +18,14 @@ import NavBar from "@/components/navBar.astro";
     <title>Karen Gómez</title>
   </head>
   <!-- <body class="bg-slate-900 container max-w-3xl mx-auto px-4 sm:px-10"> -->
-  <body class="bg-slate-900 container px-5 mx-auto max-w-4xl">
+  <body class="bg-slate-900 container pb-10 px-5 mx-auto max-w-4xl">
     <NavBar />
     <main>
       <slot />
     </main>
     <style is:global>
       p {
-        @apply text-xl text-justify mb-6 text-slate-300;
+        @apply text-xl text-justify text-slate-300;
       }
       p a {
         @apply text-blue-400;
