--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -225,7 +225,9 @@ import Layout from "@/layout/general.astro";
     h1 {
       @apply text-white;
     }
-
+    div i {
+      @apply pt-6;
+    }
     .img-profile {
       @apply w-60  rounded-full;
     }
