--- a/src/components/projectsdetails.astro
+++ b/src/components/projectsdetails.astro
@@ -13,7 +13,7 @@ import projectsData from "@/data/projects.json";
             <div class="flex flex-col md:flex-row rounded-md border-2 border-slate-600 hover:border-white">
               <img class="img-project" src={project.img} alt="" />
               <div class="p-3 flex flex-col gap-2 items-center">
-                <h3>{project.title}</h3>
+                <h3 class="mb-0">{project.title}</h3>
                 <p>{project.text}</p>
 
                 <div class="flex justify-center flex-wrap gap-3">
