change p padding blog

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -35,6 +35,9 @@ const { Content } = await entry.render();
   h1 {
     @apply text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500;
   }
+  p {
+    @apply pb-4;
+  }
   hr {
     @apply pb-4;
   }
