--- a/src/components/navBar.astro
+++ b/src/components/navBar.astro
@@ -1,7 +1,7 @@
 <nav class="flex flex-row pt-10 justify-between">
   <a href="/"><h3>KarenGómez</h3></a>
   <div class="flex gap-3 sm:flex-row sm:gap-10">
-    <a href="/projects"><h3>Projects</h3></a>
+    <a href="/projects"><h3>Repos</h3></a>
     <a href="/blog"><h3>Blog</h3></a>
   </div>
 </nav>
