--- a/src/components/projectshome.astro
+++ b/src/components/projectshome.astro
@@ -10,8 +10,8 @@ import projectsData from "@/data/projects.json";
           <div class="flex justify-between bg-slate-800 border-slate-600 hover:border-white rounded-md border-2 px-3 py-2">
             <p class="text-white font-semibold my-auto">{project.title}</p>
             <p class="text-slate-400 font-semibold my-auto">
-              Go to
-              <i title="github" class="ml-2 fa-brands fa-github text-white" />
+              See project
+              <i class="fa-solid fa-arrow-up-right-from-square" />
             </p>
           </div>
         </a>
