--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -212,7 +212,7 @@ import Layout from "@/layout/general.astro";
         <h3>My projects</h3>
 
         <a href="/projects">
-          <button>View All</button>
+          <button>View All Repos</button>
         </a>
       </div>
       <!-- div de todos los proyectos -->
